[package]
name = "lexopt_derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for lexopt"
license = "MIT OR Apache-2.0 OR Zlib"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/lexopt_derive"
documentation = "https://docs.rs/lexopt_derive"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT", "LICENSE-ZLIB"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", default-features = false, features = ["derive", "parsing", "proc-macro"] }

[dev-dependencies]
lexopt = "0.3.0"
