[package]
name = "lexopt_derive"
version = "0.0.1-alpha"
edition = "2021"
description = "Derive macros for lexopt"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/lexopt_derive"
documentation = "https://docs.rs/lexopt_derive"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29", default-features = false, features = ["derive", "parsing", "proc-macro"] }

[dev-dependencies]
lexopt = "0.3.0"
